# sfguide-UDF-UDTF-examples

./: README.md
udf/security/: WORKSPACE
udf/security/aws-iam/: BUILD.bazel  README.md  install.sh
udf/security/aws-iam/src/main/java/com/snowflake/redteam/uarlos/: Arn.java  IamCondition.java  IamConditionContext.java  IamPolicy.java  IamPolicyCacheEntry.java  IamPolicyCacheKey.java  IamPolicyFactory.java  IamPrincipal.java  IamRequest.java  IamSimulationResult.java  IamStatement.java  IamStatementEvaluationResult.java  IamTrieNode.java  MultiStringAdaptor.java  PermissionGrant.java  UDF.java
udf/security/aws-iam/src/test/java/com/snowflake/redteam/uarlos/: TestUDFIntegration.java
udf/security/aws-iam/src/test/resources/com/snowflake/redteam/uarlos/: assume_role_policy.json  assume_role_policy_list.json  assume_role_policy_multi_statements.json
